--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="WENS has a simple mission of providing a decentralized and yet affordable way to map domain names (represented as .WETH) to on-chain data. Where on-chain data can be anything from a Ethereum (ETH) address to IPFS CID, images, text, and more."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
